removed some crufy old functions from yote.util.js and completed select and selectobj template things

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,9 @@
 The stack :
 
- Preload objects as the pages are served by the server. paginator override is causing problems due to things cached maybe?
+ new templating system : add select boxes
+ new templating system : add radio boxes
+
+ Cron still has problems?
 
  Clear out obj manager cache and guest token by checking who logged in times. Good thing for cron.
 
