fixed bug in edit field

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-07  Eric Wolf  <wolf@Talisman>
+
+	* Version 0.1021
+	* fixed bug in edit field
+
 2014-01-14  Eric Wolf  <wolf@Talisman>
 
 	* Version 0.1020
