--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-02-17  Eric Wolf  <wolf@Talisman>
+
+	* Version 0.1022
+	* added wrap_list method to javascript yote object. This returns an object that paginates a wholly loaded list.
+	* refactored button_actions to create and return a manager object.
+	* added allowable return headers for javascript.
+
 2014-02-07  Eric Wolf  <wolf@Talisman>
 
 	* Version 0.1021
