--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-02-26  Eric Wolf  <wolf@Talisman>
+
+	* Version 0.1023
+	* fixed bug in mongo db list_insert
+	* updated tests
+	* added sort example to templte testy.html page
+	* implemented reverse is wrapped list sort
+
 2014-02-17  Eric Wolf  <wolf@Talisman>
 
 	* Version 0.1022
