--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,7 +2,7 @@ The stack :
 
  SCRIPT TAG : id registers self <SCRIPT type="text/template" id="template_name">...</script>
 
- have tests for wrap hash
+ template for hashes ( like <@ for lists... <%  )
 
  redo admin page with new templates
 
