for wrap_list pagination, hashkey_search_criteria now takes a space separated string. also button actions exempt takes a list rather than a hash

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* The client side templating system is complete, though more debugging is certainly needed.
 	* The next huge thing to do is to write the documents.
 	* Fixed bug in sqlite where queries were too big
+	* updated hash template to include a before and after list part.
 
 2014-02-26  Eric Wolf  <wolf@Talisman>
 
