working more on the templating system. have a target in mind ( admin3.htlm )

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,6 +2,12 @@ The stack :
 
 renew old world bakery biz?
 
+ list adder?
+
+ for js..just package up all the js and send it across as one.
+
+ also, list and hash template things should automatically do the wrapping.
+
  args hash for template functions rather than argument lists? Way to pack data into template? Something like json is looking good
 
  edit or show control depending on who's logged in
