--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,8 +1,8 @@
 The stack :
  
- for js..just package up all the js and send it across as one.
+  for js..just package up all the js and send it across as one.
 
- more data into the template with json?
+ having template files that are reusable across runs.  A 'load template' if you were.
 
  edit or show control depending on who's logged in
 
