--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,9 @@
 The stack :
  
+ - mysql cron problems? check other stores cron.  Am seeing database connection errors
+                my best guess is its due to the threadedness.  each thread then should have a separate connection to the database
+          LOOKS like this is  solved. Just have to make sure mongo and sqlite have sensible query methods. more worried about sqlite
+
  for js..just package up all the js and send it across as one.
 
  edit or show control depending on who's logged in
