This branch is developing yote so that simple apps can be done on the front end

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,8 @@
 The stack :
 
+How should MadYote look?
 
-
+ - version - yote version should be able to be queried from the server.
 
  - templates
          fix new variable bug
