--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,12 +2,13 @@ The stack :
 
 How should MadYote look?
 
+* CRON BORKED
+
+* TEST FILE UPLOAD
+
+
+
  - version - yote version should be able to be queried from the server.
-
- - templates
-         fix new variable bug
-         test $$$$ define non input variable. for things like storing messages for templates
-
 
  - client side object permission detection. "Can I edit the given object" - if root, yes, but also if
     the object is a UserObj and you are the user that owns it
@@ -18,20 +19,13 @@ How should MadYote look?
 
  for js..just package up all the js and send it across as one. How about a js directory --> minified --> returned and a cron that does the minifying
 
- edit or show control depending on who's logged in
-
  checkbox control that hooks to functions rather than ( on change, current value functions )
 
  test if mysql queries too big ( fixed in sqlite )
 
- redo admin page with new templates
-
- server side determination of container type
-
  new templating system : add radio boxes
 
  Clear out obj manager cache and guest token by checking who logged in times. Good thing for cron.
-
 
  rewrite yote_util and define special characters better ( scaffold this...replace one piece at a time since its largely working )
 
