--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,27 @@
 The stack :
 
+_Templates_
+
+ Pair down the number of template commands. Get rid of new and new_hash and
+add ability to define template function inline.
+
+ template parsing..make sure innermost gets parsed first
+
+if you can add conditionals, then
+  Get rid of $@ and $%, just have list?
+
+
+
+
+
+
+
+
+
+
+___________________________________________
+
+
 How should MadYote look?
 
 * run mongo and mysqlite tests if those are present maybe?
@@ -11,15 +33,6 @@ How should MadYote look?
 
 
  - version - yote version should be able to be queried from the server.
-
- - client side object permission detection. "Can I edit the given object" - if root, yes, but also if
-    the object is a UserObj and you are the user that owns it
- 
- - mysql cron problems? check other stores cron.  Am seeing database connection errors
-                my best guess is its due to the threadedness.  each thread then should have a separate connection to the database
-          LOOKS like this is  solved. Just have to make sure mongo and sqlite have sensible query methods. more worried about sqlite
-
- for js..just package up all the js and send it across as one. How about a js directory --> minified --> returned and a cron that does the minifying
 
  checkbox control that hooks to functions rather than ( on change, current value functions )
 
