new simpler templating system and split out templates from yote.util.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -16,9 +16,9 @@ _Templates_
 Precidence
   <# comments go here #>
   <??? function( ctx ) ...
-  <$$$ function foo( ctx ) ...
-  <$$$ var varname value $$$>
-  <$$$ value varname function( ctx ) ...
+  <$$$ set varname function foo( ctx ) ...
+  <$$$ set varname othervar $$$>
+  <$$$ set varname "value" $$$>
   <?? function( ctx ) ....
   <$$ template 
   <@ template list max_rows @>
