--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,9 +3,11 @@ The stack :
 - make ' function( ctx ) be optional or implicit '
 - add sigils to variable names, like $foo to distinguish them from strings, or force use of quotes for strings or both
 
+- multi process engines. Going to have to do this if this program is going to be taken seriously at all. Damn, I keep going in circles and circles.
+
 More ideads : 
 
-cron - consider making a hash rather than a list of cron entries
+cron - consider making a hash rather than a list of cron entries for namespace uniquencess
 
 apps - when reset, provide a destructor for doing things like removing cron entries
 
