--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,9 @@
+May need containers that can paginate as this is removed in the yote simplification.
+I'm thinking that maybe might want to implement a list that corresponds to indexed tables
+and a hash function that piggybacks off of that.
+
+_________________________________________________________________________________________
+
 The new home grown yotedb is working in at least the common case. Passes all tests.
  Should pour though it to see if there are any tiny bits of time that can be shaved from it. Someday journaling? 
  Maybe less destructive updates ( a bit to indicate wether or not to ditch that row? )
@@ -12,14 +18,14 @@ Working on :
 
  * caching maybe? Just a simple one that holds the most popular of items. last out, longest staying
 
- * redisgn of sorts? Maybe break things up into
-     Yote::ObjStore
-     Yote::WebServer
 
 
 Done :
 
  * can it pass the tests on the javascript side? Yes, seems to pass in about 9 seconds, compared to 40 for sqlite.
+ * redisgn of sorts? Maybe break things up into
+     Yote::ObjStore
+     Yote::WebServer
 
 
 
