--- a/LockServer/CHANGELOG
+++ b/LockServer/CHANGELOG
@@ -1,3 +1,10 @@
+1.3  - added configurable retry ability for lock clients
+
+1.2 	Updates for tests
+	
+1.1  - Make the server restful. Added run method which doesn't fork and return.
+       Make sure the socket communications are utf-8.
+	
 1.04 - added license, version and changelog files to manifest
 
 1.03 - added use warnings, the license file and the changelog file.
