--- a/YoteServer/TODO
+++ b/YoteServer/TODO
@@ -1,4 +1,9 @@
 
+Security Questions:
+  * use SSL?
+  * With restful, the URL could be snooped even with SSL.
+    Maybe move the token and the path to the POST data
+
 write POD
 
 write tests ( similar to Lock::Server )
