--- a/YoteBase/ChangeLog
+++ b/YoteBase/ChangeLog
@@ -1,3 +1,6 @@
+2015-11-02 Eric Wolf  <coyocanid@gmail.com>
+	* Version 1.1
+	* Yote::ObjStore::fetch fixed bug where it would barf for isntantiating subpackages of a file
 2015-09-30 Eric Wolf  <coyocanid@gmail.com>
 	* Version 1.0
 	* Reduces complexity of Yote, bringing the core into a simple file.
